[project]
name = "library-search"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "PyMuPDF>=1.24",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "pydantic>=2.0",
    "watchfiles>=1.0",
    "anthropic>=0.40",
    "scikit-learn>=1.5",
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
]

[tool.uv]
package = false
